--- a/app/src/main/res/navigation/nav_graph.xml
+++ b/app/src/main/res/navigation/nav_graph.xml
@@ -6,11 +6,6 @@
     app:startDestination="@id/loginFragment">
 
 
-    <action android:id="@+id/action_pop_out_of_login"
-        app:popUpTo="@id/loginFragment"
-        app:popUpToInclusive="true" />
-
-
     <fragment
         android:id="@+id/loginFragment"
         android:name="it.unitn.disi.fumiprovv.roommates.fragments.login.LoginFragment"
@@ -35,6 +30,12 @@
             app:destination="@id/homeFragment"
             app:popUpTo="@id/loginFragment"
             app:popUpToInclusive="true" />
+        <action
+            android:id="@+id/action_loginFragment_to_settingsFragment"
+            app:destination="@id/settingsFragment" />
+        <action
+            android:id="@+id/action_loginFragment_to_noteFragment"
+            app:destination="@id/noteFragment" />
     </fragment>
     <fragment
         android:id="@+id/registrationFragment"
@@ -87,6 +88,9 @@
             app:destination="@id/homeFragment"
             app:popUpTo="@id/houseCreatedFragment"
             app:popUpToInclusive="true" />
+        <action
+            android:id="@+id/action_houseCreatedFragment_to_noteFragment"
+            app:destination="@id/noteFragment" />
     </fragment>
     <fragment
         android:id="@+id/forgotPasswordFragment"
@@ -105,4 +109,39 @@
             app:popUpTo="@id/loginFragment"
             app:popUpToInclusive="true" />
     </fragment>
+    <fragment
+        android:id="@+id/settingsFragment"
+        android:name="it.unitn.disi.fumiprovv.roommates.fragments.SettingsFragment"
+        android:label="fragment_settings"
+        tools:layout="@layout/fragment_settings" >
+        <action
+            android:id="@+id/action_settingsFragment_to_loginFragment"
+            app:destination="@id/loginFragment"
+            app:popUpTo="@id/settingsFragment"
+            app:popUpToInclusive="true" />
+        <action
+            android:id="@+id/action_settingsFragment_to_houseCreationFragment"
+            app:destination="@id/houseCreationFragment"
+            app:popUpTo="@id/settingsFragment"
+            app:popUpToInclusive="true" />
+        <action
+            android:id="@+id/action_settingsFragment_self"
+            app:destination="@id/settingsFragment"
+            app:popUpTo="@id/settingsFragment"
+            app:popUpToInclusive="true" />
+    </fragment>
+    <fragment
+        android:id="@+id/noteFragment"
+        android:name="it.unitn.disi.fumiprovv.roommates.fragments.NoteFragment"
+        android:label="fragment_note"
+        tools:layout="@layout/fragment_note" >
+        <action
+            android:id="@+id/action_noteFragment_to_newNoteFragment"
+            app:destination="@id/newNoteFragment" />
+    </fragment>
+    <fragment
+        android:id="@+id/newNoteFragment"
+        android:name="it.unitn.disi.fumiprovv.roommates.fragments.NewNoteFragment"
+        android:label="fragment_new_note"
+        tools:layout="@layout/fragment_new_note" />
 </navigation>
