--- a/app/src/main/res/layout/fragment_calendario.xml
+++ b/app/src/main/res/layout/fragment_calendario.xml
@@ -24,18 +24,15 @@
             android:layout_width="match_parent"
             android:layout_height="1dp"
             app:layout_constraintTop_toBottomOf="@+id/calendar_view"
-            app:layout_constraintBottom_toTopOf="@+id/selected_date_text_view"
+            app:layout_constraintBottom_toTopOf="@+id/recyclerView"
             />
 
-        <TextView
-            android:id="@+id/selected_date_text_view"
-            android:layout_width="match_parent"
-            android:layout_height="0dp"
-            android:textSize="24sp"
-            android:gravity="center"
+        <androidx.recyclerview.widget.RecyclerView
+            android:id="@+id/recyclerView"
             app:layout_constraintTop_toBottomOf="@+id/divider"
             app:layout_constraintBottom_toBottomOf="parent"
-            />
+            android:layout_width="match_parent"
+            android:layout_height="0dp" />
 
         <Button
             android:id="@+id/button_aggiungi_evento"
