--- a/app/src/main/res/layout/event_item.xml
+++ b/app/src/main/res/layout/event_item.xml
@@ -3,14 +3,30 @@
     xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
-    android:background="@drawable/border">
+    android:background="@drawable/border"
+    android:layout_marginVertical="5dp"
+    android:layout_marginHorizontal="18dp">
 
     <!-- Customize the content of each item here -->
     <!-- Example: TextView to display the item's text -->
-    <TextView
-        android:id="@+id/itemText"
+    <LinearLayout
         android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:padding="8dp" />
+        android:layout_height="match_parent"
+        android:orientation="vertical">
+
+        <TextView
+            android:id="@+id/itemDataEvento"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:padding="8dp"
+            android:textAppearance="@android:style/TextAppearance.Medium"/>
+        <TextView
+            android:id="@+id/itemDescrizioneEvento"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:padding="8dp" />
+    </LinearLayout>
+
+
 
 </FrameLayout>
