--- a/app/src/main/res/layout/fragment_buy_items.xml
+++ b/app/src/main/res/layout/fragment_buy_items.xml
@@ -63,9 +63,12 @@
         app:layout_constraintEnd_toEndOf="@+id/buyAmountField"
         app:layout_constraintHorizontal_bias="0.0"
         app:layout_constraintStart_toStartOf="@+id/textView2"
-        app:layout_constraintTop_toBottomOf="@+id/textView2" />
+        app:layout_constraintTop_toBottomOf="@+id/textView2" >
+
+    </ListView>
 
     <LinearLayout
+        android:id="@+id/linearLayout3"
         android:layout_width="365dp"
         android:layout_height="135dp"
         android:layout_marginTop="36dp"
@@ -87,7 +90,20 @@
             android:layout_height="match_parent"
             android:foregroundTint="@android:color/primary_text_dark"
             android:scrollbarAlwaysDrawHorizontalTrack="true"
-            android:scrollbars="vertical"
-            android:scrollbarThumbVertical="@android:color/white"/>
+            android:scrollbarThumbVertical="@android:color/white"
+            android:scrollbars="vertical" />
+
     </LinearLayout>
+
+    <ProgressBar
+        android:id="@+id/buyItemsProgressbar"
+        style="?android:attr/progressBarStyle"
+        android:layout_width="100dp"
+        android:layout_height="100dp"
+        android:visibility="gone"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toTopOf="parent" />
+
 </androidx.constraintlayout.widget.ConstraintLayout>
