--- a/app/src/main/res/values/themes.xml
+++ b/app/src/main/res/values/themes.xml
@@ -8,6 +8,7 @@
         <item name="android:textColor">@color/white</item>
         <item name="backgroundColor">@color/background_dark</item>
         <item name="android:background">@color/background_dark</item>
+        <item name="android:actionMenuTextColor">@color/white</item>
         <!-- Secondary brand color. -->
         <item name="colorSecondary">@color/teal_200</item>
         <item name="colorSecondaryVariant">@color/teal_700</item>
