--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -9,4 +9,5 @@
     <color name="white">#FFFFFFFF</color>
 
     <color name="background_dark">#212121</color>
+    <color name="primaryTextColor">@color/white</color>
 </resources>
