--- a/app/src/main/res/layout/fragment_registration.xml
+++ b/app/src/main/res/layout/fragment_registration.xml
@@ -2,10 +2,11 @@
 <ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
+    android:id="@+id/fragment_registration"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context=".fragments.login.RegistrationFragment"
-    android:id="@+id/fragment_registration">
+    android:background="@color/background_dark"
+    tools:context=".fragments.login.RegistrationFragment">
 
     <!-- TODO: Update blank fragment layout -->
     <androidx.constraintlayout.widget.ConstraintLayout
